--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "connect-livereload": "^0.6.1",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
+    "helmet": "^5.0.2",
     "livereload": "^0.9.3",
     "mongoose": "^6.1.10"
   },
